--- a/ngSpotify/src/app/components/about/about.component.html
+++ b/ngSpotify/src/app/components/about/about.component.html
@@ -1,1 +1,4 @@
-ABOUT SECTION
+<h1>About ngSpotify</h1>
+<h3>Version: 1.0</h3>
+<p>This is an Angular 2 app that uses the Spotify Web API to find artists and display albums, track list and preview tracks.</p>
+<h2>CHECK YOUR VOLUME BEFORE CLICKING ANY PREVIEW TRACKS</h2>
