--- a/ngSpotify/src/app/components/artist/artist.component.html
+++ b/ngSpotify/src/app/components/artist/artist.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="artist">
     <header class="artist-header">
         <div *ngIf="artist.images.length > 0">
-            <img class="artist-thumb img-circle" src="{{artist.images[0].url}}">    
+            <img class="artist-thumb img-thumbnail" src="{{artist.images[0].url}}">    
         </div> 
         <h1>{{artist.name}}</h1>
         <p *ngIf="artist.genres.length > 0">
@@ -16,7 +16,7 @@
                       <div class="album well">
                         <img class="album-thumb img-thumbnail" src="{{album.images[0].url}}">
                         <h4>{{album.name}}</h4>
-                        <a class="btn btn-default btn-block" routerLink="album/{{album.id}}">Album Details</a>
+                        <a class="btn btn-primary btn-block" routerLink="/album/{{album.id}}">Album Details</a>
                         </div>
                   </div>
             </div>    
